Fixed sidebar, added new hover, styled scrollbar

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -56,22 +56,20 @@
 /* Styling scroll */
 .scroll::-webkit-scrollbar-track, .sidebar::-webkit-scrollbar-track
 {
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
 	border-radius: 10px;
-	background-color: #F5F5F5;
+	background-color: transparent;
 }
 
 .scroll::-webkit-scrollbar, .sidebar::-webkit-scrollbar
 {
-	width: 12px;
-	background-color: #F5F5F5;
+	width: 10px;
+	background-color: transparent;
 }
 
 .scroll::-webkit-scrollbar-thumb, .sidebar::-webkit-scrollbar-thumb
 {
 	border-radius: 10px;
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-	background-color: #576cdf;
+	background-color: #c9c8c8;
 }
 
 .svg-icon-bildstudio {
@@ -96,6 +94,10 @@
 
 .height-dashboard {
   height: calc(100% - 136px);
+}
+
+.nav-height {
+  height: calc(100% - 60px);
 }
 
 /*Show More/Show less - text*/
@@ -849,8 +851,8 @@ body {
 .ml-\[8px\] {
     margin-left: 8px;
 }
-.ml-\[6px\] {
-    margin-left: 6px;
+.ml-\[-24px\] {
+    margin-left: -24px;
 }
 .mt-\[5px\] {
     margin-top: 5px;
@@ -858,8 +860,8 @@ body {
 .mt-\[9px\] {
     margin-top: 9px;
 }
-.ml-\[14px\] {
-    margin-left: 14px;
+.ml-\[13px\] {
+    margin-left: 13px;
 }
 .block {
     display: block;
@@ -890,9 +892,6 @@ body {
 }
 .h-\[40px\] {
     height: 40px;
-}
-.h-full {
-    height: 100%;
 }
 .w-screen {
     width: 100vw;
@@ -941,8 +940,11 @@ body {
 .overflow-hidden {
     overflow: hidden;
 }
-.overflow-auto {
-    overflow: auto;
+.overflow-y-auto {
+    overflow-y: auto;
+}
+.overflow-x-hidden {
+    overflow-x: hidden;
 }
 .whitespace-nowrap {
     white-space: nowrap;
@@ -988,10 +990,6 @@ body {
 .border-\[\#c9c8c8\] {
     --tw-border-opacity: 1;
     border-color: rgba(201, 200, 200, var(--tw-border-opacity));
-}
-.border-white {
-    --tw-border-opacity: 1;
-    border-color: rgba(255, 255, 255, var(--tw-border-opacity));
 }
 .bg-white {
     --tw-bg-opacity: 1;
@@ -1047,6 +1045,10 @@ body {
     padding-left: 15px;
     padding-right: 15px;
 }
+.px-\[11px\] {
+    padding-left: 11px;
+    padding-right: 11px;
+}
 .py-\[20px\] {
     padding-top: 20px;
     padding-bottom: 20px;
@@ -1077,6 +1079,12 @@ body {
 .pb-8 {
     padding-bottom: 2rem;
 }
+.pt-\[6px\] {
+    padding-top: 6px;
+}
+.pb-\[6px\] {
+    padding-bottom: 6px;
+}
 .pl-\[15px\] {
     padding-left: 15px;
 }
@@ -1088,6 +1096,9 @@ body {
 }
 .pl-\[3px\] {
     padding-left: 3px;
+}
+.pl-\[30px\] {
+    padding-left: 30px;
 }
 .pt-\[8px\] {
     padding-top: 8px;
@@ -1131,9 +1142,6 @@ body {
 .text-\[18px\] {
     font-size: 18px;
 }
-.text-\[15px\] {
-    font-size: 15px;
-}
 .font-bold {
     font-weight: 700;
 }
@@ -1174,10 +1182,6 @@ body {
     --tw-text-opacity: 1;
     color: rgba(107, 114, 128, var(--tw-text-opacity));
 }
-.text-black {
-    --tw-text-opacity: 1;
-    color: rgba(0, 0, 0, var(--tw-text-opacity));
-}
 .shadow-lg {
     --tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
     box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
@@ -1203,13 +1207,13 @@ body {
     --tw-bg-opacity: 1;
     background-color: rgba(37, 99, 235, var(--tw-bg-opacity));
 }
+.hover\:bg-\[\#4556BE\]:hover {
+    --tw-bg-opacity: 1;
+    background-color: rgba(69, 86, 190, var(--tw-bg-opacity));
+}
 .hover\:text-blue-800:hover {
     --tw-text-opacity: 1;
     color: rgba(30, 64, 175, var(--tw-text-opacity));
-}
-.hover\:text-\[\#333333\]:hover {
-    --tw-text-opacity: 1;
-    color: rgba(51, 51, 51, var(--tw-text-opacity));
 }
 .hover\:text-\[\#576cdf\]:hover {
     --tw-text-opacity: 1;
