--- a/src/style.css
+++ b/src/style.css
@@ -60,22 +60,20 @@
 /* Styling scroll */
 .scroll::-webkit-scrollbar-track, .sidebar::-webkit-scrollbar-track
 {
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
 	border-radius: 10px;
-	background-color: #F5F5F5;
+	background-color: transparent;
 }
 
 .scroll::-webkit-scrollbar, .sidebar::-webkit-scrollbar
 {
-	width: 12px;
-	background-color: #F5F5F5;
+	width: 10px;
+	background-color: transparent;
 }
 
 .scroll::-webkit-scrollbar-thumb, .sidebar::-webkit-scrollbar-thumb
 {
 	border-radius: 10px;
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-	background-color: #76A5AF;
+	background-color: #c9c8c8;
 }
 
 .svg-icon-bildstudio {
@@ -100,6 +98,10 @@
 
 .height-dashboard {
   height: calc(100% - 136px);
+}
+
+.nav-height {
+  height: calc(100% - 60px);
 }
 
 /*Show More/Show less - text*/
